--- a/README.Rmd
+++ b/README.Rmd
@@ -120,7 +120,7 @@ accounting for the stratified and clustered design of the experiment.
 main command and result.)
 
 ```stata
-. use "~/Colombia13.dta", clear
+. use "~/clusterColombia.dta", clear
 
 . 
 . timer on 1
