--- a/README.Rmd
+++ b/README.Rmd
@@ -20,14 +20,14 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/grantmcdermott/ritest/workflows/R-CMD-check/badge.svg)](https://github.com/grantmcdermott/ritest/actions)
 <!-- badges: end -->
 
-An experimental R port of the [`ritest`](https://github.com/simonheb) Stata 
+An experimental R port of the [`-ritest-`](https://github.com/simonheb) Stata 
 routine (by 
 [Simon Heß](https://github.com/simonheb)) for conducting 
 [**randomization inference**](https://dimewiki.worldbank.org/Randomization_Inference). 
 Fast and user-friendly. Currently limited to `lm()` and `fixest::feols()` 
 models, but aims to support a variety of model classes once it is fully baked.
 
-[`Installation`](#Installation) | [`Examples`](#Examples) ([`i`](#toy-data), [`ii`](#real-life-data)) | [`Benchmarks`](#Benchmarks)
+[`Installation`](#Installation) | [`Examples`](#Examples) ([`toy data`](#toy-data), [`real-life data`](#real-life-data)) | [`Benchmarks`](#Benchmarks)
 
 ## Installation
 
@@ -39,7 +39,7 @@ remotes::install_github("grantmcdermott/ritest")
 ## Examples
 
 Let's start by loading the **ritest** package. 
-I'll also load the **fixest**, **modelsummary**, and **haven** packages to help 
+I'll also load the **fixest** and **modelsummary** packages to help 
 demonstrate some additional functionality in the examples that follow.
 
 ```{r libs, cache=FALSE, message=FALSE}
@@ -47,8 +47,7 @@ library(ritest)       ## This package
 
 # Extras...
 library(fixest)       ## For fast (high-dimensional) fixed-effect regressions
-library(modelsummary) ## For nice regression tables 
-library(haven)        ## For reading .dta files
+library(modelsummary) ## For nice regression tables
 ```
 
 The `ritest()` function supports a variety of arguments, but the basic syntax 
@@ -112,10 +111,10 @@ regression) in addition the simulated rejection regions.
 plot(est_ri, show_parm = TRUE)
 ```
 
-Similarly, support for regression tables is enabled via `ritest`'s compatability
-with `modelsummary::msummary`. I recommend displaying p-values instead of the 
+Similarly, support for regression tables is enabled via **ritest's** compatability
+with `modelsummary::msummary()`. I recommend displaying p-values instead of the 
 default standard errors. This is particularly important when comparing against
-a parametric model as I do below.
+a parametric model, as I do below.
 
 ```{r msummary_est_ri}
 # library(modelsummary)  ## Already loaded
@@ -149,13 +148,14 @@ similar to the parametric p-value (0.004) from the regression model.
 
 ### Real-life data
 
-Next, we'll replicate an example in David McKenzie's nice 
+Next, we'll replicate an example from David McKenzie's nice 
 [blog post](https://blogs.worldbank.org/impactevaluations/finally-way-do-easy-randomization-inference-stata)
-about the Stata `ritest` routine. The dataset in question derives from a 
-randomized control trial about supply chains in Colombia. 
-You can download the data from David's website 
-[here](https://drive.google.com/open?id=0B9C9RwWKZrUNazdyVXFkSTlTNGc) (also 
-includes code and data for some other examples.)
+about the Stata `-ritest-` routine. The dataset in question derives from a 
+randomized control trial about supply chains in Colombia.
+You can download the original .dta file from David's website 
+[here](https://drive.google.com/open?id=0B9C9RwWKZrUNazdyVXFkSTlTNGc). 
+Alternatively, this implementation bundles the dataset as part of the R package 
+(see: `?colombia`). So you can also access and export it easily that way too.
 
 #### Stata implementation
 
@@ -169,7 +169,9 @@ accounting for the stratified and clustered design of the experiment.
 main command and result.)
 
 ```stata
-. use "~/clusterColombia.dta", clear
+. // This next line assumes you have exported the `colombia` dataset from R as a
+. // CSV for Stata to read, e.g. `write.csv(colombia, '~/colombia.csv', row.names = FALSE)`
+. insheet using "~/colombia.csv", comma clear
 
 . 
 . timer on 1
@@ -216,12 +218,12 @@ Like David, this takes around **3 minutes** to run on my laptop.
 Now, the R equivalent with this package.
 
 ```{r co_ri}
-co = haven::read_dta('~/clusterColombia.dta')
+data("colombia")
 
 co_est = 
   feols(
     dayscorab ~ b_treat + b_dayscorab + miss_b_dayscorab + round2 + round3 | b_pair, 
-    vcov = ~b_block, data = co
+    vcov = ~b_block, data = colombia
     )
 
 tic = Sys.time()
