--- a/README.Rmd
+++ b/README.Rmd
@@ -102,13 +102,13 @@ In this simple case, our parametric results appear to hold up very well. The
 original p-value of 0.019 is very close to the equivalent rejection rate
 of 0.021 that we get with our RI procedure.
 
-We can also visualize this result using the default `plot` method. The function 
-takes several arguments for added customization. But here I'll just show how to
-add the parametric 95 percent confidence interval (i.e. from the original linear 
-regression) in addition the simulated rejection regions.
+We can also visualize this result using the dedicated `plot` method. The function 
+takes several arguments for added customization. But here I'll just show the 
+default plot, which includes vertical lines that denote the simulated (in this 
+case: 95 percent) rejection regions.
 
 ```{r plot_est_ri}
-plot(est_ri, show_parm = TRUE)
+plot(est_ri)
 ```
 
 Similarly, support for regression tables is enabled via **ritest's** compatability
