--- a/README.Rmd
+++ b/README.Rmd
@@ -21,14 +21,17 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/grantmcdermott/ritest/branch/master/graph/badge.svg)](https://app.codecov.io/gh/grantmcdermott/ritest?branch=master)
 <!-- badges: end -->
 
-An experimental R port of the [`-ritest-`](https://github.com/simonheb) Stata 
-routine (by 
-[Simon Heß](https://github.com/simonheb)) for conducting 
-[**randomization inference**](https://dimewiki.worldbank.org/Randomization_Inference). 
-Fast and user-friendly. Currently limited to `lm()` and `fixest::feols()` 
-models, but aims to support a variety of model classes once it is fully baked.
+Conduct [**randomization inference**](https://dimewiki.worldbank.org/Randomization_Inference)
+on R model objects.
 
-[`Installation`](#Installation) | [`Examples`](#Examples) ([`toy data`](#toy-data), [`real-life data`](#real-life-data)) | [`Benchmarks`](#Benchmarks)
+This R package is a port of the [`-ritest-`](https://github.com/simonheb) Stata 
+routine (by 
+[Simon Heß](https://github.com/simonheb)). It doesn't (yet) try to support all
+of the features in the Stata version and is currently limited to `lm()` and 
+`fixest::feols()` models. But it does appear to be significantly faster, and 
+aims to support a variety of model classes once it is fully baked.
+
+[`Installation`](#Installation) | [`Useage`](#Useage) | [`Benchmarks`](#Benchmarks) | [`License`](#)
 
 ## Installation
 
@@ -37,235 +40,49 @@ models, but aims to support a variety of model classes once it is fully baked.
 remotes::install_github("grantmcdermott/ritest")
 ```
 
-## Examples
+## Useage
 
-Let's start by loading the **ritest** package. 
-I'll also load the **fixest** and **modelsummary** packages to help 
-demonstrate some additional functionality in the examples that follow.
+Here follows a basic example using the `colombia` dataset that comes bundled
+with the package. Note that I'll also use the `fixest::feols()` function to 
+estimate the parametric model first.
 
 ```{r libs, cache=FALSE, message=FALSE}
 library(ritest)       ## This package
-
-# Extras...
 library(fixest)       ## For fast (high-dimensional) fixed-effect regressions
-library(modelsummary) ## For nice regression tables
-```
 
-The `ritest()` function supports a variety of arguments, but the basic syntax 
-is
-
-```r
-ritest(object, resampvar, reps=100, strata=NULL, cluster=NULL, ...)
-```
-
-where: 
-
-- `object` is a model object (e.g. a linear regression).
-- `resampvar` is the variable that you want to resample (i.e. permute). You can
-also specify the sharp null hypothesis that you want to test as part of a 
-character string.
-- `reps` is the number of simulations (i.e. permutations).
-- `strata` is a variable defining the stratification (aka "blocking") of the 
-experimental design, if any.
-- `cluster` is a variable defining the clustering of treatment in the 
-experimental design, if any.
-- `...` are other arguments. This includes the ability to set a random seed for
-reproducibility, controlling the parallelism behaviour, adding a progress bar,
-etc. See `?ritest` for more information.
-
-
-### Toy data
-
-Our first example will be a rather naive implementation using the base
-[`nkp`](https://vincentarelbundock.github.io/Rdatasets/doc/MASS/npk.html) 
-dataset.
-
-```{r est}
-est = lm(yield ~ N + P + K, data = npk)
-```
-
-Let's say we're interested in the yield effect of 'N' (i.e. nitrogen).
-We want to know whether our inferential reasoning about this parameter is 
-robust to using RI, as opposed to just relying on the parametric t-test and 
-p-value produced by our linear regression model. We'll do 1,000
-simulations and, just for illustration, limit the number of parallel cores to 2. 
-(The default parallel behaviour will use half of the available cores on a user's
-machine.) 
-The 'verbose = TRUE' argument simply prints the results upon completion,
-including the original regression model summary.
-
-```{r est_ri}
-# est_ri = ritest(est, ~N, reps = 1e3, seed = 1234L, pcores = 2L, verbose = TRUE) ## Formulas work too
-est_ri = ritest(est, 'N', reps = 1e3, seed = 1234L, pcores = 2L, verbose = TRUE)
-```
-
-In this simple case, our parametric results appear to hold up very well. The
-original p-value of 0.019 is very close to the equivalent rejection rate
-of 0.021 that we get with our RI procedure.
-
-We can also visualize this result using the dedicated `plot` method. The function 
-takes several arguments for added customization. But here I'll just show the 
-default plot, which includes vertical lines that denote the simulated (in this 
-case: 95 percent) rejection regions.
-
-```{r plot_est_ri}
-plot(est_ri)
-```
-
-As an aside, note that the RI procedure tests against a standard two-sided null 
-hypothesis of zero. (In the above case: `H0: N1=0`.) We can specify a different
-null hypothesis as part of the `resampvar` string. For example:
-
-```{r plot_est_ri_alt_ho}
-plot(ritest(est, 'N<=2', reps = 1e3, seed = 1234L, pcores = 2L))
-```
-
-Support for regression tables is enabled via **ritest's** compatability
-with `modelsummary::msummary()`. I recommend displaying p-values instead of the 
-default standard errors. This is particularly important when comparing against
-a parametric model, as I do below.
-
-```{r msummary_est_ri}
-# library(modelsummary)  ## Already loaded
-
-msummary(list(lm = est, ritest = est_ri), 
-         statistic = 'p.value', 
-         ## These next arguments just make our table look nicer for this README
-         coef_map = c('N1' = 'Nitrogen'), 
-         gof_omit = 'Obs|R2|IC|Log|F',
-         output = 'markdown',
-         notes = 'p-values shown in parentheses.')
-```
-
-As final illustration using our toy data, we'll test a more realistic model
-that controls for the stratified (aka "blocked") design of the original `npk`
-experiment. We'll do this by specifying these strata (blocks) as fixed-effects in 
-our regression model. I'll also use this as an opportunity to show that that the
-package is fully compatible with piping workflows. This might be useful if you
-don't feel like saving intermediate objects. Here I'll use the new base R pipe 
-(`|>`) that was introduced in R 4.1.1.
-
-```{r est2}
-# library(fixest) ## Already loaded
-
-feols(yield ~ N + P + K | block, vcov = 'iid', data = npk) |>
-  ritest('N', strata = 'block', reps = 1e3, seed = 99L)
-```
-
-Again, we obtain an RI rejection rate (0.003) that is very 
-similar to the parametric p-value (0.004) from the regression model.
-
-### Real-life data
-
-Next, we'll replicate an example from David McKenzie's nice 
-[blog post](https://blogs.worldbank.org/impactevaluations/finally-way-do-easy-randomization-inference-stata)
-about the Stata `-ritest-` routine. The dataset in question derives from a 
-randomized control trial about supply chains in Colombia.
-You can download the original .dta file from David's website 
-[here](https://drive.google.com/open?id=0B9C9RwWKZrUNazdyVXFkSTlTNGc). 
-Alternatively, this implementation bundles the dataset as part of the R package 
-(see: `?colombia`). So you can also access and export it easily that way too.
-
-#### Stata implementation
-
-First, here is the Stata code and output. I won't go into detail about the 
-actual research question that we're trying to address. (See David's blog post 
-for more on that.) The essential thing to know is that I'm going to run 
-5,000 RI permutations on a pretty standard fixed-effect model, whilst 
-accounting for the stratified and clustered design of the experiment. 
-
-(Aside: I'm also snipping most of the Stata output, so as to only highlight the 
-main command and result.)
-
-```stata
-. // This next line assumes you have exported the `colombia` dataset from R as a
-. // CSV for Stata to read, e.g. `write.csv(colombia, '~/colombia.csv', row.names = FALSE)`
-. insheet using "~/colombia.csv", comma clear
-
-. 
-. timer on 1
-
-. 
-. ritest b_treat _b[b_treat], cluster(b_block) strata(b_pair) reps(5e3) seed(546): ///
-> areg dayscorab b_treat b_dayscorab miss_b_dayscorab round2 round3, cluster(b_block) a(b_pair)
-
-[snipped]
-
-
-      command:  areg dayscorab b_treat b_dayscorab miss_b_dayscorab round2 round3, cluster(b_block)
-                    a(b_pair)
-        _pm_1:  _b[b_treat]
-  res. var(s):  b_treat
-   Resampling:  Permuting b_treat
-Clust. var(s):  b_block
-     Clusters:  63
-Strata var(s):  b_pair
-       Strata:  31
-
-------------------------------------------------------------------------------
-T            |     T(obs)       c       n   p=c/n   SE(p) [95% Conf. Interval]
--------------+----------------------------------------------------------------
-       _pm_1 |   -.180738     529    5000  0.1058  0.0043  .0974064   .1146569
-------------------------------------------------------------------------------
-Note: Confidence interval is with respect to p=c/n.
-Note: c = #{|T| >= |T(obs)|}
-
-. 
-. timer off 1
-
-```
-
-Like David, this takes around **3 minutes** to run on my laptop.
-
-```stata
-. timer list
-   1:    183.01 /        1 =     183.0150
-```
-
-#### R implementation
-
-Now, the R equivalent with this package.
-
-```{r co_ri}
 data("colombia")
 
+## Parametric model using fixest::feols()
 co_est = 
   feols(
-    dayscorab ~ b_treat + b_dayscorab + miss_b_dayscorab + round2 + round3 | b_pair, 
+    dayscorab ~ b_treat + b_dayscorab + miss_b_dayscorab | b_pair + round2 + round3, 
     vcov = ~b_block, data = colombia
     )
+```
 
-tic = Sys.time()
-co_ri = ritest(co_est, ~b_treat, cluster=~b_block, strata=~b_pair, reps=5e3, seed=546L)
-toc = Sys.time() - tic
+Let's conduct RI on the treatment variable (`b_treat`), whilst taking account of
+the stratified and clustered experimental design.
 
-## Print the results
+```{r co_ri}
+co_ri = ritest(co_est, 'b_treat', strata='b_pair', cluster='b_block', reps=1e3, seed=546L)
 co_ri
 ```
 
-Using the same random seed is a bit of performance art. We won't get exactly
-the same results across two different languages. But the important thing to note 
-is that they are functionally equivalent (rejection probability of 0.106 vs
-0.104).
-
-One nice feature of this R implementation is that it should complete very 
-quickly. This time, the 5,000 simulations only take around **6 seconds**.
-
-```{r toc}
-toc
-```
-
-Again, we can plot the results. Here's a slight variation, where we plot in
-histogram form and use a fill to highlight the 95% rejection region(s) instead
-of vertical lines.
+A default plotting method is provided.
 
 ```{r plot_co_ri}
-plot(co_ri, type = 'hist', highlight = 'fill')
+plot(co_ri)
 ```
 
+For more examples and demonstration of additional features, please see the 
+introductory vignette.
 
-### Benchmarks
+## Benchmarks
 
-As indicated in the real-life data example, I generally observe a speed increase
-of around 30x compared to the Stata version. This gap appears to widen further
-for larger datasets and for certain kinds of RI setups.
+I generally observe a speed increase of between 25x--50x compared to the Stata 
+version. Again, see the introductory vignette for timed examples.
+
+## License
+
+The software code contained within this repository is made available under the 
+[MIT license](http://opensource.org/licenses/mit-license.php).
