--- a/README.Rmd
+++ b/README.Rmd
@@ -24,12 +24,12 @@ knitr::opts_chunk$set(
 Conduct [**randomization inference**](https://dimewiki.worldbank.org/Randomization_Inference)
 on R model objects.
 
-This R package is a port of the [`-ritest-`](https://github.com/simonheb) Stata 
-routine (by 
-[Simon Heß](https://github.com/simonheb)). It doesn't (yet) try to support all
-of the features in the Stata version and is currently limited to `lm()` and 
-`fixest::feols()` models. But it does appear to be significantly faster, and 
-aims to support a variety of model classes once it is fully baked.
+This R package is a port of the excellent 
+[`-ritest-`](https://github.com/simonheb/ritest) Stata routine by Simon Heß. It 
+doesn't (yet) try to support all of the features in the Stata version and is 
+currently limited to `lm()` and `fixest::feols()` models. But it does appear to 
+be significantly faster, and aims to support a variety of model classes once it 
+is fully baked.
 
 [`Installation`](#Installation) | [`Useage`](#Useage) | [`Benchmarks`](#Benchmarks) | [`License`](#)
 
@@ -47,8 +47,8 @@ with the package. Note that I'll also use the `fixest::feols()` function to
 estimate the parametric model first.
 
 ```{r libs, cache=FALSE, message=FALSE}
-library(ritest)       ## This package
-library(fixest)       ## For fast (high-dimensional) fixed-effect regressions
+library(ritest)  ## This package
+library(fixest)  ## For fast (high-dimensional) fixed-effect regressions
 
 data("colombia")
 
@@ -64,18 +64,12 @@ Let's conduct RI on the treatment variable (`b_treat`), whilst taking account of
 the stratified and clustered experimental design.
 
 ```{r co_ri}
-co_ri = ritest(co_est, 'b_treat', strata='b_pair', cluster='b_block', reps=1e3, seed=546L)
-co_ri
+ritest(co_est, 'b_treat', strata='b_pair', cluster='b_block', reps=1e3, seed=1234)
 ```
 
-A default plotting method is provided.
-
-```{r plot_co_ri}
-plot(co_ri)
-```
-
-For more examples and demonstration of additional features, please see the 
-introductory vignette.
+For more examples and demonstration of additional features --- plotting,
+regression tables, etc. --- please see the 
+[**introductory vignette**](http://grantmcdermott.com/ritest/articles/ritest.html).
 
 ## Benchmarks
 
