--- a/README.Rmd
+++ b/README.Rmd
@@ -31,8 +31,6 @@ currently limited to `lm()` and `fixest::feols()` models. But it does appear to
 be significantly faster, and aims to support a variety of model classes once it 
 is fully baked.
 
-[`Installation`](#Installation) | [`Useage`](#Useage) | [`Benchmarks`](#Benchmarks) | [`License`](#)
-
 ## Installation
 
 ``` r
@@ -40,13 +38,18 @@ is fully baked.
 remotes::install_github("grantmcdermott/ritest")
 ```
 
-## Useage
+## Usage
 
-Here follows a basic example using the `colombia` dataset that comes bundled
-with the package. Note that I'll also use the `fixest::feols()` function to 
-estimate the parametric model first.
+A detailed walkthrough of the package is provided in the introductory
+vignette. See `vignette("ritest")`.
 
-```{r libs, cache=FALSE, message=FALSE}
+As a quickstart, here follows a basic example using data from a randomized 
+control trial (RCT) that was conducted in Colombia. The dataset is provided with 
+this package. 
+
+First, we use the `fixest::feols()` function to estimate the parametric model.
+
+```{r co_est, message=FALSE}
 library(ritest)  ## This package
 library(fixest)  ## For fast (high-dimensional) fixed-effect regressions
 
@@ -55,26 +58,52 @@ data("colombia")
 ## Parametric model using fixest::feols()
 co_est = 
   feols(
-    dayscorab ~ b_treat + b_dayscorab + miss_b_dayscorab | b_pair + round2 + round3, 
+    dayscorab ~ b_treat + b_dayscorab | b_pair + miss_b_dayscorab + round2 + round3, 
     vcov = ~b_block, data = colombia
     )
+co_est
 ```
 
-Let's conduct RI on the treatment variable (`b_treat`), whilst taking account of
-the stratified and clustered experimental design.
+Our key treatment variable (`b_treat`) is deemed to be statistically significant
+(p-value of 0.024), even as we cluster the standard errors.
+
+But let's see if this result is robust to randomization inference (RI). We'll 
+perform 1,000 RI permutations on `b_treat`, whilst taking into account the 
+stratified and clustered experimental design of the underlying RCT.
 
 ```{r co_ri}
 ritest(co_est, 'b_treat', strata='b_pair', cluster='b_block', reps=1e3, seed=1234)
 ```
 
-For more examples and demonstration of additional features --- plotting,
-regression tables, etc. --- please see the 
+The simulated p-value is noticeably larger than the parametric one (0.107 vs
+0.024), suggesting that our parametric model is overstating the effectiveness
+of treatment.
+
+For more examples and additional features --- plotting, regression tables, etc. 
+--- please see the 
 [**introductory vignette**](http://grantmcdermott.com/ritest/articles/ritest.html).
 
 ## Benchmarks
 
 I generally observe a speed increase of between 25x--50x compared to the Stata 
 version. Again, see the introductory vignette for timed examples.
+
+## Other software
+
+Apart from the Stata [`-ritest-`](https://github.com/simonheb/ritest) routine, 
+there are several other packages for conducting randomization inference in R.
+For example, the [**ri**](https://cran.r-project.org/web/packages/ri/index.html)
+has been available for nearly a decade. More recently, the successor [**ri2**](https://cran.r-project.org/web/packages/ri2/index.html) package
+extends upon the original, with updated syntax and functionality. An advantage
+of **ri2** is that it integrates with the wider 
+[DeclareDesign](https://declaredesign.org/) suite of R packages for experimental
+and empirical research design. This enables researchers to build RI and other
+experimental considerations into the incipient design process. On the other
+hand, this places some restrictions on conducting RI _ex post_ or in 
+quasi-experimental settings (e.g. a study that leverages a natural experiment). 
+For example, you can't pass an existing regression model object to 
+`ri2::conduct_ri()`, which is what `ritest::ritest()` was designed for. Your use
+case will likely determine which software is optimal for you.
 
 ## License
 
