--- a/vignettes/ritest.Rmd
+++ b/vignettes/ritest.Rmd
@@ -184,7 +184,7 @@ co_est =
   feols(
     dayscorab ~ b_treat + b_dayscorab + miss_b_dayscorab | b_pair + round2 + round3, 
     vcov = ~b_block, data = colombia
-    )
+  )
 co_est
 ```
 
@@ -256,15 +256,14 @@ msummary(list(lm = co_est, ritest = co_ri),
          notes = 'p-values shown in parentheses.')
 ```
 
-### Formulas
+### NSE
 
-Formula interfaces are supported if you don't like writing variables (i.e.
-the `resampvar` and/or `strata` and `cluster` arguments) as strings. I'll just
-use the default number of reps (i.e. 100) and drop the random seed for this next
-example.
+If you don't feel like quoting the variable arguments (i.e. `resampvar` & co.),
+then you can also pass them as unquoted NSE or one-side formulas. For example:
 
 ```{r formulas}
-ritest(co_est, ~b_treat, strata=~b_pair, cluster=~b_block)
+# ritest(co_est, ~b_treat, strata = ~b_pair, cluster = ~b_block) # formula
+ritest(co_est, b_treat, strata = b_pair, cluster = b_block)      # NSE
 ```
 
 ### ggplot2
@@ -283,14 +282,11 @@ ggplot(data.frame(betas = co_ri$betas), aes(betas)) +
 ### Piping workflows
 
 The **ritest** package is fully compatible with piping workflows. This might be
-useful if you don't feel like saving intermediate objects. Uncomment the code 
-chunk below to see an example using the new base R pipe (`|>`) that was 
-introduced in R 4.1.0. But the same principal would carry over to popular 
-magrittr pipe (`%>%`).
+useful if you don't feel like saving intermediate objects. Here is is a simple
+example using the base `|>` pipe that was introduced in R 4.1.0.
 
 ```{r est2_pipe}
-## Uncomment and run this code if you have R 4.1 or above
-# feols(yield ~ N + P + K | block, vcov = 'iid', data = npk) |> # model
-#   ritest('N', strata = 'block', reps = 1e3, seed = 99L) |>      # ritest
-#   plot()                                                        # plot
+feols(yield ~ N + P + K | block, vcov = 'iid', data = npk) |> # model
+  ritest('N', strata = 'block', reps = 1e3, seed = 99L) |>    # ritest
+  plot()                                                      # plot
 ```
